# Data-Science-Portfolio

./: .gitignore  README.md
Covid_Project/: app.py  covid.ipynb  main.py  pyproject.toml
Diabetes Prediction/: README.md  model.json  pyproject.toml  test.py  train.ipynb
Heart Disease/: Model.ipynb  README.md  main.py  pyproject.toml
Image Classification/: .gitignore  main.py  pyproject.toml  test.py  train.ipynb
Leaf Disease/: .gitignore  README.md  Simple_GUI.py  main.py  model.json  prediction.py  pyproject.toml  training.ipynb
Road Sign Recognistion/: app.py  main.py  project.ipynb  pyproject.toml
Titanic Survival/: .gitignore  EDA.ipynb  Prediction.py  README.md  pyproject.toml
