[project]
name = "titanic-survival"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
]
